test-suite/typecheck/pass/binary_float.first
function f(a: Float, b: Float) -> Float {
  return a + b * a;
}
