test-suite/typecheck/fail/wrong_constructor_type.first
import * "Prelude"
function f() -> Option<String> {
  return some(42);
}
